--- a/app/src/main/res/layout/activity_add_version.xml
+++ b/app/src/main/res/layout/activity_add_version.xml
@@ -2,9 +2,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/screen_background"
     tools:context=".AddVersionActivity">
 
@@ -32,61 +32,115 @@
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
 
-    <EditText
-        android:id="@+id/idEdtVersionName"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/idTxtSongName"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="10dp"
-        android:paddingLeft="10dp"
-        android:background="@drawable/edit_text_shape_orange"
-        android:hint="@string/version_name"
-        android:textColor="@color/highlighted_text_yellow"
-        android:textColorHint="@color/standard_text_dark_grey"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/idEdtVersionDescription"
+    <ScrollView
+        android:id="@+id/scrollView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/idEdtVersionName"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/edit_text_shape_orange"
-        android:hint="@string/version_description"
-        android:inputType="textMultiLine"
-        android:minLines="2"
-        android:gravity="start"
-        android:paddingLeft="10dp"
-        android:paddingTop="14dp"
-        android:paddingBottom="14dp"
-        android:textColor="@color/highlighted_text_yellow"
-        android:textColorHint="@color/standard_text_dark_grey"
-        android:textStyle="bold" />
+        android:paddingTop="24dp"
+        android:layout_alignBaseline="@+id/idTxtSongName">
 
-    <EditText
-        android:id="@+id/idEdtVersionLyrics"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/idEdtVersionDescription"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edit_text_shape_orange"
-        android:hint="@string/version_lyrics"
-        android:inputType="textMultiLine"
-        android:minLines="3"
-        android:gravity="start"
-        android:paddingLeft="10dp"
-        android:paddingTop="14dp"
-        android:paddingBottom="14dp"
-        android:textColor="@color/highlighted_text_yellow"
-        android:textColorHint="@color/standard_text_dark_grey"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idTxtSongName"
+                android:layout_marginStart="17dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/version"
+                android:textColor="@color/standard_text_dark_grey"
+                android:textSize="17dp" />
+
+            <EditText
+                android:id="@+id/idEdtVersionName"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/idTxtSongName"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_text_shape_orange"
+                android:hint="@string/version_name"
+                android:textColor="@color/highlighted_text_yellow"
+                android:textColorHint="@color/standard_text_dark_grey"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idEdtVersionName"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/description"
+                android:textColor="@color/standard_text_dark_grey"
+                android:textSize="17dp" />
+
+            <EditText
+                android:id="@+id/idEdtVersionDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idEdtVersionName"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/edit_text_shape_orange"
+                android:hint="@string/version_description"
+                android:inputType="textMultiLine"
+                android:minLines="2"
+                android:gravity="start"
+                android:paddingLeft="10dp"
+                android:paddingTop="14dp"
+                android:paddingBottom="14dp"
+                android:textColor="@color/highlighted_text_yellow"
+                android:textColorHint="@color/standard_text_dark_grey"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idEdtVersionDescription"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/lyrics"
+                android:textColor="@color/standard_text_dark_grey"
+                android:textSize="17dp" />
+
+            <EditText
+                android:id="@+id/idEdtVersionLyrics"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idEdtVersionDescription"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/edit_text_shape_orange"
+                android:hint="@string/version_lyrics"
+                android:inputType="textMultiLine"
+                android:minLines="3"
+                android:gravity="start"
+                android:paddingLeft="10dp"
+                android:paddingTop="14dp"
+                android:paddingBottom="14dp"
+                android:textColor="@color/highlighted_text_yellow"
+                android:textColorHint="@color/standard_text_dark_grey"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnAddVersion"
