--- a/app/src/main/res/layout/activity_view_version.xml
+++ b/app/src/main/res/layout/activity_view_version.xml
@@ -2,9 +2,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/screen_background"
     tools:context=".AddVersionActivity">
 
@@ -24,7 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lyricistImage"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
         android:gravity="center"
         android:text="@string/song_name"
         android:textColor="@color/highlighted_text_yellow"
@@ -32,83 +35,100 @@
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/lyricistImage" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <ScrollView
+        android:id="@+id/scrollView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/idTxtSongName"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="start"
-        android:text="@string/version"
-        android:textColor="@color/standard_text_dark_grey"
-        android:textSize="17sp" />
+        android:paddingTop="24dp"
+        android:layout_alignBaseline="@+id/idTxtSongName">
 
-    <TextView
-        android:id="@+id/idTxtVersionName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_marginStart="17dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="start"
-        android:text="@string/version_name"
-        android:textColor="@color/highlighted_text_yellow"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/idTxtVersionName"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="start"
-        android:text="@string/description"
-        android:textColor="@color/standard_text_dark_grey"
-        android:textSize="17sp" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idTxtSongName"
+                android:layout_marginStart="17dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/version"
+                android:textColor="@color/standard_text_dark_grey"
+                android:textSize="17sp" />
 
-    <TextView
-        android:id="@+id/idTxtVersionDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_marginStart="17dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="start"
-        android:text="@string/version_description"
-        android:textColor="@color/highlighted_text_yellow"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/idTxtVersionName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView2"
+                android:layout_marginStart="17dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/version_name"
+                android:textColor="@color/highlighted_text_yellow"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/idTxtVersionDescription"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="start"
-        android:text="@string/lyrics"
-        android:textColor="@color/standard_text_dark_grey"
-        android:textSize="17sp" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idTxtVersionName"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/description"
+                android:textColor="@color/standard_text_dark_grey"
+                android:textSize="17sp" />
 
-    <TextView
-        android:id="@+id/idTxtVersionLyrics"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_marginStart="17dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="start"
-        android:text="@string/version_lyrics"
-        android:textColor="@color/highlighted_text_yellow"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/idTxtVersionDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView3"
+                android:layout_marginStart="17dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/version_description"
+                android:textColor="@color/highlighted_text_yellow"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/idTxtVersionDescription"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/lyrics"
+                android:textColor="@color/standard_text_dark_grey"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/idTxtVersionLyrics"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView4"
+                android:layout_marginStart="17dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="start"
+                android:text="@string/version_lyrics"
+                android:textColor="@color/highlighted_text_yellow"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/idBtnEditVersion"
